# personal-website-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.dev.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 1329e001fb2f_add_categories_table.py  2cbd9c42606d_add_subcategories_table.py  32445a336ce9_add_profile_photo_id_to_users.py  53c76b3819f8_create_images_table.py  5aac3fb2e551_create_users_table.py  79dc83d98544_add_image_id_to_projects.py  7b508f776a63_add_blog_post_categories_and_blog_post_.py  eacde95d717c_add_blog_posts_and_blog_post_authors_.py  fcf3a19e3889_add_projects_project_categories_and_.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  blog_posts.py  health.py  images.py  projects.py  users.py
app/core/: config.py  database.py  security.py  storage.py  text.py
app/dependencies/: auth.py  db.py  storage.py
app/models/: __init__.py  base.py  blog_post.py  category.py  image.py  project.py  subcategory.py  user.py
app/repositories/: base.py  blog_post.py  category.py  image.py  project.py  subcategory.py  user.py
app/schemas/: auth.py  base.py  blog_post.py  category.py  image.py  project.py  subcategory.py  user.py
app/services/: auth.py  blog_post.py  image.py  image_converter.py  project.py  storage.py  taxonomy.py  user.py
